finish desctop version natours

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,7 +1,11 @@
   <!-- SECTION HEADER -->
    <div class="navigation">
     <input class="navigation__checkbox" type="checkbox" id="nav-toggle">
-    <label class="navigation__button" for="nav-toggle">MENU</label>
+    <label class="navigation__button" for="nav-toggle">
+      <span class="navigation__button-line navigation__button-line--top"></span>
+      <span class="navigation__button-line navigation__button-line--middle"></span>
+      <span class="navigation__button-line navigation__button-line--bottom"></span>
+    </label>
     <div class="navigation__background">&nbsp;</div>
     <nav class="navigation__box">
       <ul class="navigation__list">
@@ -21,7 +25,7 @@
 <!--  header content  -->
     <div class="header__content">
       <h1 class="header__title"><span class="header__title-top">Outdoors</span><span class="header__title-bottom">is where life happens</span></h1>
-      <div class="header__button"><a href="#" class="button button--white button--animated">Discover our tours</a></div>
+      <div class="header__button"><a href="#popup" class="button button--white button--animated">Discover our tours</a></div>
     </div>
   </header>
   <main>
