--- a/app/components/tours.html
+++ b/app/components/tours.html
@@ -21,7 +21,7 @@
                 <div class="tour-card__side-wrapper">
                   <p class="tour-card__text">only</p>
                   <div class="tour-card__price">$297</div>
-                  <a href="#" class="button button--white">Book now!</a>
+                  <a href="#popup" class="button button--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -44,7 +44,7 @@
                 <div class="tour-card__side-wrapper">
                   <p class="tour-card__text">only</p>
                   <div class="tour-card__price">$497</div>
-                  <a href="#" class="button button--white">Book now!</a>
+                  <a href="#popup" class="button button--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -67,12 +67,12 @@
                 <div class="tour-card__side-wrapper">
                   <p class="tour-card__text">only</p>
                   <div class="tour-card__price">$897</div>
-                  <a href="#" class="button button--white">Book now!</a>
+                  <a href="#popup" class="button button--white">Book now!</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <a href="#" class="button button--green">Discover all tours</a>
+        <a href="#popup" class="button button--green">Discover all tours</a>
       </div>
     </section>
