--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -24,6 +24,30 @@
     </div>
   </footer>
 
+  <!-- popup -->
+   <div class="popup" id="popup">
+    <div class="popup__wrapper">
+      <div class="popup__inner">
+        <div class="popup__image">
+          <img src="./images/nat-8.jpg" alt="Photo people on atour">
+          <img src="./images/nat-9.jpg" alt="Photo people on atour">
+        </div>
+        <div class="popup__content">
+          <a class="popup__close" href="#tours">&times;</a>
+          <h2 class="popup__title title title--extra-large">Start booking now</h2>
+          <h3 class="popup__title-second title title-large">Important &mdash; please read these terms before booking</h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, reiciendis in nisi, eligendi dolores sapiente assumenda dicta optio libero illo voluptatem tenetur numquam necessitatibus nulla qui quam earum ducimus alias!
+            Eaque, esse animi tempore nostrum id nemo quos impedit quod molestiae aut repellendus quam porro voluptatem laboriosam. Iste optio perspiciatis error cum corrupti facere harum eius voluptatum ex, libero ut?
+            Fuga repudiandae exercitationem aperiam eius facilis. Libero illo voluptatem tenetur numquam necessitatibus nulla qui.
+            <div class="popup__button">
+              <a class="button button--green" href="#">book now</a>
+            </div>
+        </div>
+      </div>
+    </div>
+   </div>
+
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
   <script src="js/main.min.js"></script>
 </body>
