--- a/app/scss/_components.scss
+++ b/app/scss/_components.scss
@@ -535,6 +535,28 @@
     z-index: 2000;
     @include shadow(0, 1rem, 3rem, rgba($blackColor, .1));
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: .7rem;
+    transition: all .2s;
+
+    &:hover {
+      gap: .9rem;
+    }
+
+    &-line {
+      width: 3rem;
+      height: 2px;
+      background-color: $footerBgColor;
+      display: inline-block;
+      transition: all .5s;
+
+      &--middle {
+        opacity: 1;
+      }
+    }
   }
 
   // .navigation__background
@@ -615,4 +637,124 @@
 .navigation__checkbox:checked ~ .navigation__box {
   opacity: 1;
   width: 100vw;
+}
+
+// animate burger menu
+
+.navigation__checkbox:checked + .navigation__button .navigation__button-line--top {
+  transform: rotate(405deg) translate(4px, 4px);
+}
+
+.navigation__checkbox:checked + .navigation__button .navigation__button-line--middle {
+  display: none;
+  opacity: 0;
+}
+
+.navigation__checkbox:checked + .navigation__button .navigation__button-line--bottom {
+  transform: rotate(-405deg) translate(2px, -2px);;
+}
+.navigation__checkbox:checked + .navigation__button:hover {
+  gap: .7rem;
+}
+
+//===============================================================================
+// ================================= POPUP ======================================
+//===============================================================================
+
+.popup {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba($blackColor, .8);
+  z-index: 3000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s;
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__wrapper {
+    width: 75%;
+    background-color: $whiteColor;
+    @include shadow(0, 2rem, 4rem, rgba($blackColor, .2));
+    opacity: 0;
+    transform: scale(.5);
+    transition: all .3s .2s;
+  }
+
+  // .popup__inner
+  &__inner {
+    display: grid;
+    grid-template-columns: 33% 67%;
+  }
+
+  // .popup__image
+  &__image {
+    display: flex;
+    flex-direction: column;
+    
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+
+  // .popup__content
+  &__content {
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+  }
+
+  // .popup__title
+  &__title {
+    margin-bottom: 1rem;
+  }
+
+  // .popup__title-second
+  &__title-second {
+    margin-bottom: 1rem;
+  }
+
+  // .popup__text
+  &__text {
+    font-size: 1.4rem;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid $greyColor;
+    hyphens: auto;
+  }
+
+  // .popup__button
+  &__button {
+    margin-top: auto;
+  }
+
+  &__close {
+    position: absolute;
+    top: .8rem;
+    right: 1.5rem;
+    font-size: 2rem;
+    display: inline-block;
+    line-height: 1;
+    padding: 1rem;
+
+    &:hover {
+      color: $primaryColorDark;
+    }
+  }
+}
+
+.popup:target .popup__wrapper {
+  opacity: 1;
+  transform: scale(1);
 }
