--- a/app/components/about.html
+++ b/app/components/about.html
@@ -1,5 +1,5 @@
     <!-- SECTION ABOUT -->
-    <section class="about">
+    <section id="about" class="about">
       <div class="container">
         <h2 class="about__title title title--extra-large">Exiting tours for adventurous people</h2>
         <div class="about__wrapper">
@@ -17,9 +17,9 @@
             <a href="#" class="btn">Learn more &rarr;</a>
           </div>
           <div class="about__images">
-            <img src="./images/nat-1-large.jpg" alt="Photo of nature" class="about__images-item about__images-item--1">
-            <img src="./images/nat-2-large.jpg" alt="Photo of nature" class="about__images-item about__images-item--2">
-            <img src="./images/nat-3-large.jpg" alt="Photo of nature" class="about__images-item about__images-item--3">
+            <img src="./images/nat-1-large.webp" alt="Photo of mount and river" class="about__images-item about__images-item--1">
+            <img src="./images/nat-2-large.webp" alt="Photo women walk on mount peak" class="about__images-item about__images-item--2">
+            <img src="./images/nat-3-large.webp" alt="Photo men ride on bike on panorama mouting" class="about__images-item about__images-item--3">
           </div>
         </div>
       </div>
