--- a/app/components/book.html
+++ b/app/components/book.html
@@ -1,5 +1,5 @@
     <!-- SECTION BOOK -->
-    <section class="book">
+    <section id="book" class="book">
       <div class="container">
         <div class="book__wrapper">
           <form action="#" class="form">
