--- a/app/components/features.html
+++ b/app/components/features.html
@@ -1,5 +1,5 @@
     <!-- SECTION FEATURES -->
-    <section class="features">
+    <section id="features" class="features">
       <div class="container">
         <div class="features__wrapper">
           <!--  Card 1  -->
