--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,5 +1,39 @@
   <!-- SECTION HEADER -->
-   <div class="navigation">
+  <header class="header">
+    <!--  logo  -->
+    <div class="header__logo">
+      <img src="images/logo-white.webp" alt="Natours logo">
+    </div>
+    <!-- header navigation -->
+    <nav class="navigation__box">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#about" class="navigation__link"><span>01</span>About Natours</a></li>
+        <li class="navigation__item"><a href="#features" class="navigation__link"><span>02</span>Your benefits</a></li>
+        <li class="navigation__item"><a href="#tours" class="navigation__link"><span>03</span>Popular tours</a></li>
+        <li class="navigation__item"><a href="#stories" class="navigation__link"><span>04</span>Stories</a></li>
+        <li class="navigation__item"><a href="#book" class="navigation__link"><span>05</span>Book now</a></li>
+      </ul>
+    </nav>
+    <!-- header navigation button -->
+    <div class="navigation__button">
+      <span class="navigation__button-line navigation__button-line--top"></span>
+      <span class="navigation__button-line navigation__button-line--middle"></span>
+      <span class="navigation__button-line navigation__button-line--bottom"></span>
+    </div>
+    <!-- navigation background -->
+    <div class="navigation__background">&nbsp;</div>
+    <!--  header content  -->
+    <div class="header__content">
+      <h1 class="header__title"><span class="header__title-top">Outdoors</span><span class="header__title-bottom">is where life happens</span></h1>
+      <div class="header__button"><a href="#popup" class="button button--white button--animated">Discover our tours</a></div>
+    </div>
+  </header>
+  <main>
+  
+  
+  
+  <!-- SECTION HEADER -->
+  <!-- <div class="navigation">
     <input class="navigation__checkbox" type="checkbox" id="nav-toggle">
     <label class="navigation__button" for="nav-toggle">
       <span class="navigation__button-line navigation__button-line--top"></span>
@@ -9,7 +43,7 @@
     <div class="navigation__background">&nbsp;</div>
     <nav class="navigation__box">
       <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+        <li class="navigation__item"><a href="#about" class="navigation__link"><span>01</span>About Natours</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
         <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
@@ -18,14 +52,12 @@
     </nav>
    </div>
   <header class="header">
-<!--  logo  -->
     <div class="header__logo">
-      <img src="images/logo-white.png" alt="Natours">
+      <img src="images/logo-white.webp" alt="Natours logo">
     </div>
-<!--  header content  -->
     <div class="header__content">
       <h1 class="header__title"><span class="header__title-top">Outdoors</span><span class="header__title-bottom">is where life happens</span></h1>
       <div class="header__button"><a href="#popup" class="button button--white button--animated">Discover our tours</a></div>
     </div>
   </header>
-  <main>
+  <main> -->
