--- a/app/components/stories.html
+++ b/app/components/stories.html
@@ -1,5 +1,5 @@
     <!-- SECTION STORIES -->
-    <section class="stories">
+    <section id="stories" class="stories">
       <div class="bg-video">
         <video class="bg-video__content" autoplay muted loop>
           <source src="images/video.mp4" type="video/mp4">
