--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,12 +1,4 @@
 /* ==========================================================================
-========================       MEDIA 1366px      ============================
-===========================================================================*/
-
-@media (max-width: 85.375em) {
-  
-}
-
-/* ==========================================================================
 ========================       MEDIA 1200px      ============================
 ===========================================================================*/
 
@@ -16,15 +8,6 @@
     font-size: 56.25%;
   }
 }
-
-/* ==========================================================================
-========================       MEDIA 1100px      ============================
-===========================================================================*/
-
-@media (max-width: 68.75em) {
-
-}
-
 
 /* ==========================================================================
 ========================       MEDIA 1000px      ============================
@@ -39,7 +22,7 @@
   .form {
     &__group {
       &-box {
-        width: 100%;
+        inline-size: 100%;
       }
     }
 
@@ -104,24 +87,16 @@
 }
 
 /* ==========================================================================
-=========================       MEDIA 850px      ============================
-===========================================================================*/
-
-@media (max-width: 53.125em) {
-
-}
-
-/* ==========================================================================
 =========================       MEDIA 820px      ============================
 ===========================================================================*/
 
 @media (max-width: 51.25em) {
 
   .tour-card {
-    width: 25rem;
+    inline-size: 25rem;
 
     &__side {
-      width: 25rem;
+      inline-size: 25rem;
     }
 
     &__list {
@@ -159,7 +134,7 @@
   }
 
   .about {
-    padding: 25rem 0 60rem;
+    padding: 10rem 0 50rem;
 
     &__wrapper {
       grid-template-columns: 1fr;
@@ -170,7 +145,7 @@
       top: 0;
       left: 50%;
       transform: translateX(-50%);
-      max-width: 85%;
+      max-inline-size: 85%;
     }
   }
 }
@@ -191,30 +166,18 @@
 }
 
 /* ==========================================================================
-=========================       MEDIA 590px      ============================
-===========================================================================*/
-
-@media (max-width: 36.875em) {
-
-}
-
-/* ==========================================================================
 =========================       MEDIA 500px      ============================
 ===========================================================================*/
 
 @media (max-width: 31.25em) {
 
-  .header {
-    clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
-  }
-
   .features__wrapper {
     grid-template-columns: repeat(2, 1fr);
-    gap: 6rem;
+    gap: 3rem;
   }
 
   .card {
-    margin: 0 auto;
+    margin-inline: auto;
 
     &__title {
       font-size: 2.5rem;
@@ -226,10 +189,10 @@
   }
 
   .form {
-    width: 100%;
+    inline-size: 100%;
 
     &__input {
-      width: 100%;
+      inline-size: 100%;
     }
   }
 
@@ -247,8 +210,6 @@
 @media (max-width: 30em) {
 
   .about {
-    padding: 25rem 0 55rem;
-
     &__content {
       text-align: center;
     }
@@ -262,11 +223,11 @@
   }
 
   .tour-card {
-    width: 35rem;
-    margin: 0 auto;
+    inline-size: 35rem;
+    margin-inline: auto;
 
     &__side {
-      width: 35rem;
+      inline-size: 35rem;
     }
 
     &__image {
@@ -290,8 +251,6 @@
 @media (max-width: 25.625em) {
 
   .header {
-    clip-path: polygon(0 0, 100% 0, 100% 88vh, 0 100%);
-
     &__content {
       top: 50%;
     }
@@ -301,7 +260,7 @@
 
       &-top {
         font-size: 3.5rem;
-        margin-bottom: 1rem;
+        margin-block-end: 1rem;
         letter-spacing: 2.8rem;
       }
   
@@ -314,12 +273,12 @@
 
   .navigation {
     &__list {
-      width: 100%;
+      inline-size: 100%;
     }
   }
 
   .about {
-    padding: 25rem 0 50rem;
+    padding: 8rem 0 35rem;
 
     &__content {
       &-title {
@@ -332,7 +291,7 @@
     }
 
     &__title {
-      margin-bottom: 6rem;
+      margin-block-end: 6rem;
     }
   }
 
@@ -341,7 +300,7 @@
   }
 
   .story {
-    width: 100%;
+    inline-size: 100%;
     padding: 2rem;
     transform: skewX(0);
 
@@ -365,19 +324,7 @@
 
 @media (max-width: 22.5em) {
 
-  .about {
-    padding: 25rem 0 45rem;
-  }
-
   .features__wrapper { 
     gap: 6rem 2rem;
   }
-}
-
-/* ==========================================================================
-=========================       MEDIA 320px      ============================
-===========================================================================*/
-
-@media (max-width: 20em) {
-
 }
