--- a/app/scss/_stories.scss
+++ b/app/scss/_stories.scss
@@ -1,14 +1,13 @@
 .stories {
-  padding: 15rem 0;
   text-align: center;
   position: relative;
 
   &__title {
-    margin-bottom: 8rem;
+    margin-block-end: 8rem;
   }
   
   &__wrapper {
     text-align: left;
-    margin-bottom: 6rem;
+    margin-block-end: 6rem;
   }
 }
