--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,7 +1,6 @@
 .header {
-  height: 95vh;
+  block-size: 96vh;
   @include gradient(to right bottom, $primaryColorLight, $primaryColorDark, .8, "../images/hero.webp");
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -12,7 +11,7 @@
     left: 4rem;
 
     img {
-      height: 3.5rem;
+      block-size: 3.5rem;
     }
   }
 
@@ -27,7 +26,7 @@
     color: $whiteColor;
     text-transform: uppercase;
     backface-visibility: hidden;
-    margin-bottom: 6rem;
+    margin-block-end: 6rem;
 
     span {
       display: block;
